--- a/index.html
+++ b/index.html
@@ -208,12 +208,12 @@
             <span class="desc">Gojuon grid: vowels and consonants with romaji. Reference anytime.</span>
         </a>
         <a href="kanji.html" class="kanji">
-            <span class="title">Kanji</span>
+            <span class="title">Kanji List</span>
             <span class="hint">Characters & meanings</span>
             <span class="desc">Add and study your own Kanji list. Build a personal reference.</span>
         </a>
         <a href="editor.html" style="border-color: var(--border); color: var(--secondary-text);">
-            <span class="title">Token editor</span>
+            <span class="title">Box 3 Sentence Editor</span>
             <span class="hint">Authoring</span>
             <span class="desc">Edit tokenized sentences, kana, romaji, and recompute from kana.</span>
         </a>
